@@ -43,6 +43,7 @@ var localized_strings,
 			options_drm: "Show 3rd party DRM warnings",
 			options_lowestprice_header: "Price History Information",
 			options_lowestprice: "Show",
+			options_lowestprice_coupon: "Include coupon codes in price comparison",
 			options_metacritic: "Show Metacritic user scores",
 			options_hltb: "Show HowLongToBeat.com information",
 			options_pcgw: "Show PCGamingWiki links",
@@ -162,6 +163,7 @@ var localized_strings,
 			hltb_submit: "Submit Your Time",
 			more_information: "More Information",
 			activates: "Activates on Steam",
+			after_coupon: "after coupon code",
 			card_drops_remaining: "__drops__ card drops remaining",
 			games_with_drops: "__dropsgames__ games with drops remaining",
 			games_with_booster: "__boostergames__ games eligible for booster packs",
